# regularization

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
examples/template/: config.yaml
scripts/: create_models.py  plot_results.py
src/: CMakeLists.txt  derivative_damping.cc  derivative_damping.hpp  exception.cc  exception.hpp  laplacian.cc  laplacian.hpp  norm_damping.cc  norm_damping.hpp  reg.cc  regularization.cc  regularization.hpp
test/: CMakeLists.txt  rmodel.h5  test_arma.cc  test_main.cc
